# rosneuro_decoder

./: CMakeLists.txt  README.md  package.xml
example/: run.cpp
include/rosneuro_decoder/: Decoder.h  GenericDecoder.h
src/: Decoder.cpp  GenericDecoder.cpp  decoder.cpp
test/: TestDecoder.cpp  TestGenericDecoder.cpp
